Método nuevo para procesar la imagen de la cámara usando la similitud con las máscaras.

--- a/Webots/controllers/robotController/config.ini
+++ b/Webots/controllers/robotController/config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-archivoLectura = savedTables\TablaQ_2022-04-20_14.46.50_QLearning_1.txt
+archivoLectura = 
 guardarTabla = yes
 
 API = apiWebots
