Cambios generales: Implementación del controlador usando la librería de aprendizaje por refuerzo profundo de Tensorforce. Se han añadido nuevas texturas de caminos para el suelo y un archivo de proyecto de webots para probar este controlador. Se han eliminado algunos archivos que estaban o bien vacíos o no se usaban en absoluto y se han agrupado los distintos métodos de procesado de la imagen en una carpeta "procesadoLineas" dentro de "lib"
Programación:
- Añadida la clase "Evaluacion" para almacenar distintos datos del aprendizaje y evaluar el robot.
-Añadida "ProcesadoImagenBin" que simplemente convierte la imagen a escala de grises y la reescala a un tamaño menor para usar como entrada del estado. Se detecta que se está viendo la linea o no según el porcentaje de pixeles negros en pantalla.
- Añadidos metodos para contar vueltas en "ApiControl", algunos métodos se han implementado en la clase padre mientras que otros deben implementarlo los hijos.
- Implementados los métodos para contar vueltas en "ApiWebots" mediante la proximidad al punto inicial.Tambien un método para obtener el tiempo que lleva la simulación (Dado que este tiempo puede ser mayor del real, si se acelera la simulación desde el programa).
- Se ha añadido la opción de especificar un agente desde un archivo en el archivo de configuración, si no se especifica, se carga uno por defecto, además se puede indicar una ruta para cargar la especificación de un agente ya entrenado.
- Se han añadido dos agentes básicos uno de Tensorforce y otro de DeepQ-Learning. Este último genera una configuración de red de neuronas de forma automática, lo siguiente será comparar su rendimiento con otras configuraciones especificadas por nosotros.

--- a/Webots/controllers/tensorforceController/config.ini
+++ b/Webots/controllers/tensorforceController/config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
-directorioAgente = tmp
-nombreAgente = tensorforce-2
-guardarTabla = yes
+directorioAgente = 
+nombreAgente = 
+agenteDefecto = agenteDeepQLearning.json
+guardarTabla = no
 
 API = apiWebots
