Añadido el controlador de Q-Learning para el robot, actualizado con una arquitectura y funcionamiento similar al de Tensorforce y que puede ejecutarse a más de 15fps. Falta adaptar la api de webots para que funcione en el simulador. Además, se han añadido un nuevo conjunto de máscaras alternativas que dan más fuerza a la parte inferior de la pantalla que a la superior (Para que se tenga más en cuenta la parte más cercana de la línea)

--- a/.gitignore
+++ b/.gitignore
@@ -129,3 +129,5 @@ dmypy.json
 .jpg
 .png
 Webots/controllers/robotController/savedPhotos/
+Webots/controllers/tensorforceController/evaluacion/
+.vscode/launch.json
