--- a/Webots/controllers/robotController/config.ini
+++ b/Webots/controllers/robotController/config.ini
@@ -1,5 +1,12 @@
-[DEFAULT]
-archivoLectura = 
-guardarTabla = yes
 
-API = apiWebots
+[DEFAULT]
+directorioAgente = 
+nombreAgente = QLearning
+agenteDefecto =
+guardarAgente = no
+
+API = apiAuriga
+
+[EVALUACION]
+guardarEvaluacion = no
+rutaEvaluacion = evaluacion
