Arreglados algunos problemas del algoritmo de aprendizaje, principalmente en cómo se aplicaba el refuerzo. Añadida la captura del historial de refuerzos, estados y acciones mediante la clase Evaluación. Añadida la compatibilidad con el simulador de Webots.

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,6 @@ dmypy.json
 Webots/controllers/robotController/savedPhotos/
 Webots/controllers/tensorforceController/evaluacion/
 .vscode/launch.json
+.vscode/
+evaluacion/
+Webots/controllers/robotController/logsMascaras/
