--- a/Webots/controllers/robotController/config.ini
+++ b/Webots/controllers/robotController/config.ini
@@ -3,9 +3,8 @@
 directorioAgente = 
 nombreAgente = QLearning
 agenteDefecto =
-guardarAgente = no
-
-API = apiAuriga
+guardarAgente = yes
+API = apiWebots
 
 [EVALUACION]
 guardarEvaluacion = no
