Controlador Tensorforce actualizado con la interfaz del servidor TCP Se ha agregado una especificación nueva para el agente

--- a/Webots/controllers/tensorforceController/config.ini
+++ b/Webots/controllers/tensorforceController/config.ini
@@ -1,10 +1,10 @@
 [DEFAULT]
 directorioAgente = 
-nombreAgente = agenteDeepQLearning_03
-agenteDefecto = agenteDeepQLearning_03.json
+nombreAgente = agenteDeepQLearning_04_Webots
+agenteDefecto = agenteDeepQLearning.json
 guardarAgente = no
 
-API = apiServer
+API = apiWebots
 
 [EVALUACION]
 guardarEvaluacion = no
